tests/baselines/reference/importNonExportedMember2.errors.txt
b.ts(1,10): error TS2459: Module '"./a"' declares 'Foo' locally, but it is not exported.


==== a.ts (0 errors) ====
    export {}
    interface Foo {}
    
==== b.ts (1 errors) ====
    import { Foo } from './a';
             ~~~
!!! error TS2459: Module '"./a"' declares 'Foo' locally, but it is not exported.
!!! related TS2728 a.ts:2:11: 'Foo' is declared here.
    